--- a/style.css
+++ b/style.css
@@ -87,10 +87,10 @@ header-icons{
     gap: 2rem;
 }
 .home-text{
-    font-size: var(--h1-font);
-    line-height: 1.2;
-    margin-bottom: 2px;
-    
+    position: absolute;
+    top: 50%;
+    right: 8%;
+    transform: translate(0, -50%);
     text-align: right;
 }
 .home-text h5{
@@ -101,12 +101,11 @@ header-icons{
     text-align: right;
 }
 .home-text h3{
-   
-    text-align: right;
     font-size: 40px;
     font-weight: 700;
     letter-spacing: 2px;
     margin-bottom: 35px;
+    text-align: right;
 }
 .home-img img{
     max-width: 50%;
